pagination and fixes
